Fix input on safari mobile

--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -69,6 +69,7 @@ input, select {
   padding: 0;
   background-color: transparent;
   -webkit-appearance: none;
+  border-radius: 0;
 }
 
 .current {
